<resources>
    <string name="app_name">Shifumi</string>
    <string name="temps_d_attente">Temps d\'attente :</string>
    <string name="resultat">Résultat</string>
    <string name="rejouer">Rejouer</string>
    <string name="quitter_jeu">Quitter jeu</string>
    <string name="winner">winner</string>
    <string name="joueur_1">Joueur 1</string>
    <string name="joueur_2">Joueur 2</string>
    <string name="TitleAdversaire">Choisissez votre adversaire :</string>
    <string name="LabelJouer">Jouer</string>
    <string name="LabelActualiser">Actualiser</string>
    <string name="LabelCreerPartie">Suivant</string>
</resources>
