<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="151dp"
        android:layout_height="69dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/logo"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:text="@string/resultat"
        android:textColor="@color/blanc"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRePlay"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/rejouer"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewServ" />

    <Button
        android:id="@+id/btnAnnuler"
        android:layout_width="178dp"
        android:layout_height="55dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/quitter_jeu"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewClient" />

    <TextView
        android:id="@+id/txtWinner"
        android:layout_width="159dp"
        android:layout_height="73dp"
        android:layout_marginTop="48dp"
        android:text="@string/winner"
        android:textColor="@color/blanc"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/playerServ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="68dp"
        android:text="@string/joueur_1"
        android:textColor="@color/blanc"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWinner" />

    <TextView
        android:id="@+id/playerClient"
        android:layout_width="98dp"
        android:layout_height="29dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="@string/joueur_2"
        android:textColor="@color/blanc"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/playerServ"
        app:layout_constraintTop_toBottomOf="@+id/txtWinner" />

    <ImageView
        android:id="@+id/imageViewServ"
        android:layout_width="151dp"
        android:layout_height="148dp"
        android:layout_marginStart="232dp"
        android:layout_marginLeft="232dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerServ"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ContentDescription,VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageViewClient"
        android:layout_width="151dp"
        android:layout_height="148dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerClient"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ContentDescription,VectorDrawableCompat" />

</android.support.constraint.ConstraintLayout>